<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.yazan.dahood.yazantasksmanger.AddTaskActivity"
    android:background="#0cf9e9">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="371dp"
            android:layout_height="wrap_content"
            android:id="@+id/etText"
            android:hint="@string/tasktext" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <EditText
                android:layout_width="242dp"
                android:layout_height="wrap_content"
                android:id="@+id/etPhone"
                android:hint="@string/phone" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnContacts"
                android:text="@string/contact"
                android:onClick="onClick" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="246dp"
                android:layout_height="wrap_content"
                android:id="@+id/etLocation"
                android:hint="@string/location" />

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/imageButton"
                android:src="@mipmap/ic_my_plus"
                android:onClick="onClick" />

        </LinearLayout>

        <RatingBar
            android:layout_width="251dp"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBar" />

        <Button
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnSave"
            android:layout_gravity="right"
            android:text="@string/save" />

    </LinearLayout>
</RelativeLayout>
